# task_manager

./: .dockerignore  .env-ci  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build_deploy.yaml
deploy/: nginx.conf
task_manager/: logs.txt  manage.py  pytest.ini
task_manager/bot/: admin.py  models.py  serializers.py  urls.py  views.py
task_manager/bot/migrations/: 0001_initial.py  0002_tguser_verification_code.py  0003_rename_telegram_chat_id_tguser_tg_id_and_more.py  0004_tguser_bot_state.py  0005_alter_tguser_bot_state.py  0006_alter_tguser_bot_state.py
task_manager/bot/tg/: __init__.py  bot_actions.py  client.py  dc.py
task_manager/core/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
task_manager/core/migrations/: 0001_initial.py  0002_alter_user_options.py
task_manager/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
task_manager/goals/migrations/: 0001_initial.py  0002_board_category_board_participant.py  0003_create_new_objects.py  0004_alter_category_board.py  0004_alter_category_board_alter_participant_board_and_more.py
task_manager/goals/serializers/: __init__.py  board.py  category.py  comment.py  goal.py
task_manager/task_manager/: settings.py  urls.py  wsgi.py
task_manager/tests/: fixtures.py
task_manager/tests/bot_tests/: telegram_bot_test.py
task_manager/tests/core_tests/: core_test.py
task_manager/tests/goals_tests/: board_test.py  category_test.py  comment_test.py  goal_test.py
(+3 files in other folders)
